--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <html>
-
-<head>
-<tittle>Hola mundo!</tittle>
-</head>
-
-<body>
-<h1>Hola mundo!</h1>
-</body>
-
+  <head>
+    <tittle>Hola mundo!</tittle>
+    <link href="main.css" rel="stylesheet" />
+  </head>
+  <body>
+    <h1>Hola mundo!</h1>
+  </body>
 </html>
