--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
-<html>
-  <head>
-    <tittle>Hola mundo!</tittle>
-    <link href="main.css" rel="stylesheet" />
-  </head>
+<!--hola Karolay--->
+<!--Que tal?--><!--Todo bien-->
+<!DOCTYPE HTML> <!-- Aqui declaramos que es html, es un estandar -->
+<html> 
+  <head> <!-- Aqui va informacion importante del sitio, nombre, propietario y cosillas
+ varias que son importantes para la pagina -->
+    <tittle>We'll Be Coming Back!</tittle>
+    <meta name="description" content="Aprendiendo con Karo">
+    <meta name="author" content="Karolay S., Johan V.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Este meta tag es muy importante, adapta el sitio al tamano de la pantalla --><!--ahh entiendo 
+  yeaah ves, participas tambien, muchas gracias en serio no hago nada porque aún no se cómo funciona JAJAJ
+  Jajaja te entiendo, pero basicamente todo son palabras, ahorita ves como queda
+   Aca voy a hacer algo loco, es una mala practica de programacion pero es para que quede mas
+   bonito, colocare la hoja de estilos, CSS que es otro lenguaje, adentro de html, mira-->
+    
+    <!-- Aca empieza CSS-->
+    <style>
+      body{background-color: #90cc55;}
+      h1{color: #012959;}
+      h3{color: #5c0185;}
+      p{color: white;}
+    </style>
+    <!-- Aqui termino y puse la etique de cierre que se indica con el slash -->
+    
+	</head>
   <body>
-    <h1>Hola mundo!</h1>
-  </body>
+    <h1>Thinking About You</h1> <!--h1 etiqueta de titulo, hay mas como h2 h3 h4-->
+    <br><br> <!-- br es como para saltar a la linea de abajo  -->
+    <p> Escribe aqui para que aparezca en nuestro sitio </p> <!-- p = etiqueta de parrafo-->
+    <br><br>
+    <a href="https://www.w3schools.com/"><h3>Toca aqui</h3></a>
+    <!--Puse un video de youtube, pero este codigo me lo da youtube, ahorita ponemos la pagina en internet para que veas como queda, ahh perdón Jajaja lo hacemos ya? por mi está bien, si quieres? oki-->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/bqpp872d9QU?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</body>
 </html>
+
+
+<!--mira, este simbolo (<!--) es para abrir un comentario (el navegador lo ignora)
+y este lo cierra --> 
