--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <br><br>
     <a href="https://www.w3schools.com/"><h3>Toca aqui</h3></a>
     <!--Puse un video de youtube, pero este codigo me lo da youtube, ahorita ponemos la pagina en internet para que veas como queda, ahh perdón Jajaja lo hacemos ya? por mi está bien, si quieres? oki-->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/bqpp872d9QU?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/bqpp872d9QU?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</body>
 </html>
 
