--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html> 
   <head> <!-- Aqui va informacion importante del sitio, nombre, propietario y cosillas
  varias que son importantes para la pagina -->
-    <title>We'll Be Coming Back!</title>
+    <title></title>
     <meta charset="UTF-8">
     <meta name="description" content="Aprendiendo con Karo">
     <meta name="author" content="Karolay S., Johan V.">
@@ -39,17 +39,14 @@
     <br><br> <!-- br es como para saltar a la linea de abajo  -->
     <p> Escribe aqui para que aparezca en nuestro sitio </p> <!-- p = etiqueta de parrafo-->
     <br><br>
-    <a href="https://www.w3schools.com/"><h3>Toca aqui</h3></a>
+    <a href="https://www.w3schools.com/"><h2>W3Schools</h2></a>
     <!--Puse un video de youtube, pero este codigo me lo da youtube, ahorita ponemos la pagina en internet para que veas como queda, ahh perdón Jajaja lo hacemos ya? por mi está bien, si quieres? oki-->
-   <div class="videoResponsive">
+   <div class="video-container">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/bqpp872d9QU?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
-	   <div class="videoResponsive">
+	  <br><br>
+	   <div class="video-container">
 	   <iframe width="560" height="315" src="https://www.youtube.com/embed/1A6kql6Jlz0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	   </div>
 	   </body>
 </html>
-
-
-<!--mira, este simbolo (<!--) es para abrir un comentario (el navegador lo ignora)
-y este lo cierra --> 
