--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@
     <br><br> <!-- br es como para saltar a la linea de abajo  -->
     <p> Escribe aqui para que aparezca en nuestro sitio </p> <!-- p = etiqueta de parrafo-->
     <br><br>
-    <a href="https://www.w3schools.com/"><h2>W3Schools</h2></a>
+    <a href="https://www.w3schools.com/"><h2>W3Schools</h2></a><br><br>
     <!--Puse un video de youtube, pero este codigo me lo da youtube, ahorita ponemos la pagina en internet para que veas como queda, ahh perdón Jajaja lo hacemos ya? por mi está bien, si quieres? oki-->
    <div class="video-container">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/bqpp872d9QU?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="centrado">
+	   <iframe width="560" height="315" src="https://www.youtube.com/embed/bqpp872d9QU?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 	  <br><br>
 	   <div class="video-container">
 	   <iframe width="560" height="315" src="https://www.youtube.com/embed/1A6kql6Jlz0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	   </div>
+	  </div>
 	   </body>
 </html>
