--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     <div class="centrado">
 	   <iframe width="560" height="315" src="https://www.youtube.com/embed/bqpp872d9QU?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
+	   </div>
 	  <br><br>
+	    <div class="centrado">
 	   <div class="video-container">
 	   <iframe width="560" height="315" src="https://www.youtube.com/embed/1A6kql6Jlz0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	   </div>
