--- a/index.html
+++ b/index.html
@@ -15,14 +15,6 @@
    Aca voy a hacer algo loco, es una mala practica de programacion pero es para que quede mas
    bonito, colocare la hoja de estilos, CSS que es otro lenguaje, adentro de html, mira-->
     
-    <!-- Aca empieza CSS
-    <style>
-      body{background-color: #90cc55;}
-      h1{color: #012959;}
-      h3{color: #5c0185;}
-      p{color: white;}
-    </style> Pero ahora lo cambie a una hoja de estilos mas formal-->
-    <!-- Aqui termino y puse la etique de cierre que se indica con el slash -->
     <link rel="stylesheet" href="styles.css"> <!-- Enlazo el html con el archivo externo de CSS -->
     
 	</head>
@@ -40,9 +32,12 @@
     <p> Escribe aqui para que aparezca en nuestro sitio </p> <!-- p = etiqueta de parrafo-->
     <br><br>
     <a href="https://www.w3schools.com/"><h2>W3Schools</h2></a><br><br>
-    <!--Puse un video de youtube, pero este codigo me lo da youtube, ahorita ponemos la pagina en internet para que veas como queda, ahh perdón Jajaja lo hacemos ya? por mi está bien, si quieres? oki-->
-   <div class="iframe-container">
-	<iframe width="auto" height="315" src="https://www.youtube.com/embed/XWeG7rf65s8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   </div>
+    <br>
+	  <h1>Miss you lady... I don't have a way to communicate with you :c</h1>  
+    <br>
+    <div class="iframe-container">
+	<iframe width="auto" height="315" src="https://www.youtube.com/watch?v=mJfFvO4_xnY&list=PL37XYdMyQ2qbv7L95696WCqEXamty3s1K&index=151&t=0s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+	  
  </body>
 </html>
