Actualizar index.html y styles.css

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,3 @@
-<!--hola Karolay--->
-<!--Que tal?--><!--Todo bien-->
 <!DOCTYPE HTML> <!-- Aqui declaramos que es html, es un estandar -->
 <html> 
   <head> <!-- Aqui va informacion importante del sitio, nombre, propietario y cosillas
@@ -15,7 +13,7 @@
    Aca voy a hacer algo loco, es una mala practica de programacion pero es para que quede mas
    bonito, colocare la hoja de estilos, CSS que es otro lenguaje, adentro de html, mira-->
     
-    <link rel="stylesheet" href="styles.css"> <!-- Enlazo el html con el archivo externo de CSS -->
+    <link rel="stylesheet" href="./src/styles.css"> <!-- Enlazo el html con el archivo externo de CSS -->
     
 	</head>
   <header> 
